--- a/client/app/src/App.css
+++ b/client/app/src/App.css
@@ -153,3 +153,14 @@
   background: linear-gradient(to right, #a1a1a183, #a1a1a183); 
 }
 
+.Identity {
+  background-color: tomato;
+  columns: 5;
+  padding: 10px;
+  
+}
+
+.BoxInfo {
+  background-color: blue transparent;
+  columns: 3;
+}
