--- a/client/app/src/components/Styles/slider.scss
+++ b/client/app/src/components/Styles/slider.scss
@@ -9,25 +9,25 @@ body{
     font-family: consolas;
 }
 
-.container{
+.slider{
     width: 1000px;
     position: relative;
     display: flex;
     justify-content: space-between;
 }
 
-.container .card{
+.slider .card{
     position: relative;
     cursor: pointer;
 }
 
-.container .card .face{
+.slider .card .face{
     width: 300px;
     height: 200px;
     transition: 0.5s;
 }
 
-.container .card .face.face1{
+.slider .card .face.face1{
     position: relative;
     background: #333;
     display: flex;
@@ -37,25 +37,25 @@ body{
     transform: translateY(100px);
 }
 
-.container .card:hover .face.face1{
+.slider .card:hover .face.face1{
     background: #ff0057;
     transform: translateY(0);
 }
 
-.container .card .face.face1 .content{
+.slider .card .face.face1 .content{
     opacity: 0.2;
     transition: 0.5s;
 }
 
-.container .card:hover .face.face1 .content{
+.slider .card:hover .face.face1 .content{
     opacity: 1;
 }
 
-.container .card .face.face1 .content img{
+.slider .card .face.face1 .content img{
     max-width: 100px;
 }
 
-.container .card .face.face1 .content h3{
+.slider .card .face.face1 .content h3{
     margin: 10px 0 0;
     padding: 0;
     color: #fff;
@@ -63,7 +63,7 @@ body{
     font-size: 1.5em;
 }
 
-.container .card .face.face2{
+.slider .card .face.face2{
     position: relative;
     background: #fff;
     display: flex;
@@ -75,16 +75,16 @@ body{
     transform: translateY(-100px);
 }
 
-.container .card:hover .face.face2{
+.slider .card:hover .face.face2{
     transform: translateY(0);
 }
 
-.container .card .face.face2 .content button{
+.slider .card .face.face2 .content button{
     margin: 0;
     padding: 0;
 }
 
-.container .card .face.face2 .content button{
+.slider .card .face.face2 .content button{
     margin: 15px 0 0;
     display:  inline-block;
     text-decoration: none;
@@ -94,7 +94,7 @@ body{
     border: 1px solid #333;
 }
 
-.container .card .face.face2 .content button:hover{
+.slider .card .face.face2 .content button:hover{
     background: #333;
     color: #fff;
 }
