--- a/client/app/src/index.css
+++ b/client/app/src/index.css
@@ -11,3 +11,5 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* FIN DU PROJECT (ノಠ益ಠ)ノ [flips a table] */
